--- a/ContactManager/Views/MainWindow.xaml
+++ b/ContactManager/Views/MainWindow.xaml
@@ -1,60 +1,59 @@
 ﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ContactManager"
-        xmlns:ViewModels="clr-namespace:ContactManager.ViewModels" 
-        x:Class="ContactManager.MainWindow"
-        Title="MainWindow" 
-        Width="525"
-        Height="350"
-        mc:Ignorable="d">
-    <Window.DataContext>
-        <ViewModels:MainViewModel/>
-    </Window.DataContext>
+    x:Class="ContactManager.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:ContactManager"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="525"
+    Height="350"
+    DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
+    mc:Ignorable="d">
+
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Plik">
-                <MenuItem Header="Ustawienia"/>
-                <Separator/>
-                <MenuItem Header="Za_kończ"  Command="{Binding CloseCommand}"/>
+                <MenuItem Header="Ustawienia" />
+                <Separator />
+                <MenuItem Command="{Binding CloseCommand}" Header="Za_kończ" />
             </MenuItem>
             <MenuItem Header="Edycja">
-                <MenuItem Header="Dodaj"/>
-                <MenuItem Header="Usun"/>
-                <Separator/>
-                <MenuItem Header="Zmień"/>
+                <MenuItem Header="Dodaj" />
+                <MenuItem Header="Usun" />
+                <Separator />
+                <MenuItem Header="Zmień" />
             </MenuItem>
             <MenuItem Header="Pomoc">
-                <MenuItem Header="O programie"/>
+                <MenuItem Header="O programie" />
             </MenuItem>
 
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
             <StatusBarItem>
-                <TextBlock Text="1.0.0.0"/>
+                <TextBlock Text="1.0.0.0" />
             </StatusBarItem>
         </StatusBar>
         <Grid>
-            <DataGrid 
-                      Margin="0,0,0,31"     
-                      AutoGenerateColumns="False"
-                      IsReadOnly="True"
-                      ItemsSource="{Binding ContactsList}">
+            <DataGrid
+                Margin="0,0,0,31"
+                AutoGenerateColumns="False"
+                IsReadOnly="True"
+                ItemsSource="{Binding ContactsList}">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding FirstName}" Header="Imię"/>
-                    <DataGridTextColumn Binding="{Binding LastName}" Header="Nazwisko"/>
-                    <DataGridTextColumn Binding="{Binding Email}" Header="E-mail"/>
-                    <DataGridTextColumn Binding="{Binding Address.Street}" Header="Ulica"/>
-                    <DataGridTextColumn Binding="{Binding Address.City}" Header="Miasto"/>
-                    <DataGridTextColumn Binding="{Binding Address.ZipCode}" Header="Kod pocztowy"/>
+                    <DataGridTextColumn Binding="{Binding FirstName}" Header="Imię" />
+                    <DataGridTextColumn Binding="{Binding LastName}" Header="Nazwisko" />
+                    <DataGridTextColumn Binding="{Binding Email}" Header="E-mail" />
+                    <DataGridTextColumn Binding="{Binding Address.Street}" Header="Ulica" />
+                    <DataGridTextColumn Binding="{Binding Address.City}" Header="Miasto" />
+                    <DataGridTextColumn Binding="{Binding Address.ZipCode}" Header="Kod pocztowy" />
                 </DataGrid.Columns>
             </DataGrid>
-            <TextBox Text="{Binding FindText, UpdateSourceTrigger=PropertyChanged}" 
-                     VerticalAlignment="Bottom" 
-                     Height="30" />
+            <TextBox
+                Height="30"
+                VerticalAlignment="Bottom"
+                Text="{Binding FindText, UpdateSourceTrigger=PropertyChanged}" />
         </Grid>
     </DockPanel>
-   
+
 </Window>
